--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:dev": "tsc -w",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,6 +23,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
     "@vitest/coverage-c8": "^0.31.0",
     "jest-environment-jsdom": "^29.5.0",
