--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,6 +11,6 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/main.tsx, src/routers/appRouter.tsx
+sonar.coverage.exclusions=**/types.ts, **/*.d.ts, src/main.tsx, src/routers
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
