Install jwt-decode and jsonwebtoken

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@fontsource/poppins": "^5.0.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "msw": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
